# borgpull

./: README.md  borgpull.example.toml  pyproject.toml
docs/: setup.md  systemd-timers.md
src/borgpull/: cli.py  commands.py  config.py  runner.py
tests/: test_cli.py  test_commands.py  test_config.py  test_runner.py
