[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "borgpull"
version = "0.1.0"
description = "Pull-mode borg backup orchestrator over SSH reverse tunnels"
requires-python = ">=3.11"

[project.scripts]
borgpull = "borgpull.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
